# iot-platform

./: README.md
backend/: db.sqlite3  temperature_simulator.py
backend/device/: manager.py  models.py  mqtt_client.py  views.py
backend/device/migrations/: 0001_initial.py  0002_device_is_delete.py  0003_rename_create_at_device_created_at_and_more.py
backend/iot_platform/: asgi.py  settings.py  urls.py  wsgi.py
backend/utils/: result.py
docker/: docker-compose.yml
docker/mosquitto/: mosquitto.conf
docker/mosquitto/data/: mosquitto.db
simulator/: CMakeLists.txt  Device.cpp  Device.h  main.cpp
simulator/Sensor/: AirSensor.cpp  AirSensor.h
simulator/common/: Topic.h  Utils.cpp  Utils.h
simulator/mqtt/: MqttClient.cpp  MqttClient.h
